--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-    "files.associations": {
-        "iostream": "cpp",
-        "memory": "cpp"
-    }
+    "C_Cpp.errorSquiggles": "Enabled"
 }
