--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,5 @@
 {
-    "C_Cpp.errorSquiggles": "Disabled",
     "files.associations": {
-        "ostream": "cpp",
-        "memory": "cpp",
-        "__config": "cpp",
-        "string": "cpp",
-        "*.ipp": "cpp"
+        "iosfwd": "cpp"
     }
 }
